--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,33 @@
 # Lake build artifacts (Lean build output)
 .lake/
 **/.lake/
+lake-packages/
+
+# OS
 .DS_Store
+
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+.venv/
+.venv_atropos/
+*.egg-info/
+.mypy_cache/
+.pytest_cache/
+.coverage
+htmlcov/
+dist/
+build/
+*.spec
+.env
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
